--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,19 +1,17 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>AvitalERP</PageTitle>
+<PageTitle>Avital ERP</PageTitle>
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+<div class="container-fluid">
+    <div class="row">
+        <!-- Sidebar si la necesitas -->
+        <div class="col-md-3 col-lg-2 bg-light sidebar">
+            <!-- Tu menú aquí -->
         </div>
 
-        <article class="content px-4">
+        <!-- Contenido principal -->
+        <div class="col-md-9 col-lg-10">
             @Body
-        </article>
-    </main>
+        </div>
+    </div>
 </div>
