--- a/App.razor
+++ b/App.razor
@@ -3,7 +3,8 @@
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
                 <NotAuthorized>
-                    <RedirectToLogin />
+                    <RedirectLogin />
+
                 </NotAuthorized>
             </AuthorizeRouteView>
         </Found>
